vlib/v/parser/tests/map_init.vv
fn main() {
	a := map[string]{}
	b := map[string]{cap: 10}
}
